fix: table aligns

--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -8,5 +8,5 @@
 
 p {
   font-size: 200%;
-  font-family: Buda, serif;
+  font-family: Antic, serif;
 }
