--- a/Frontend/src/app/menu/menu.component.css
+++ b/Frontend/src/app/menu/menu.component.css
@@ -23,5 +23,5 @@ a {
 
 .title {
   font-size: 200%;
-  font-family: Buda, serif;
+  font-family: Antic, serif;
 }
